--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
     <link rel="stylesheet" type="text/css" href="styles/8-places.css">
+    <link rel="stylesheet" type="image/png" href="images/logo.png">
 </head>
 <body>
 <header>
