--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-common.css">
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+    <link rel="stylesheet" type="image/png" href="images/logo.png">
 </head>
 <body>
 <header>
