--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+    <link rel="stylesheet" type="image/png" href="images/logo.png">
 </head>
 <body>
 <header>
