--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
     <link rel="stylesheet" type="text/css" href="styles/7-places.css">
+    <link rel="stylesheet" type="image/png" href="images/logo.png">
 </head>
 <body>
 <header>
